--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <meta name="description" content="SHIJTING的个人技术博客,专注分享技术,记录了我的后端工程师学习历程,PHP,MySQL,JavaScript,jQuery,Linux等后端相关技术知识"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>test1</title>
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <title>SHIJTING</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but test1 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but SHIJTING doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.slim.min.js"></script>
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
   </body>
 </html>
