--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-    <meta name="description" content="SHIJTING的个人技术博客,专注分享技术,记录了我的后端工程师学习历程,PHP,MySQL,JavaScript,jQuery,Linux等后端相关技术知识"/>
+    <meta name="keywords" content="trim('嗷')的个人博客,嗷的博客,嗷,blog,technology,analysis,ace,技术,后端,数据分析">
+    <meta name="description" content="trim('嗷');的博客专注分享技术,记录了我的后端工程师学习历程,PHP,MySQL,JavaScript,Golang,Linux等后端相关技术知识"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <title>SHIJTING</title>
+    <title>trim('嗷');</title>
   </head>
   <body>
     <noscript>
