--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,39 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <meta name="keywords" content="trim('嗷')的个人博客,嗷的博客,嗷,blog,technology,analysis,ace,技术,后端,数据分析">
     <meta name="description" content="trim('嗷');的博客专注分享技术,记录了我的后端工程师学习历程,PHP,MySQL,JavaScript,Golang,Linux等后端相关技术知识"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
     <title>trim('嗷');</title>
+    <style>
+      html {
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        font-size: 16px;
+      }
+      body {
+        font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but SHIJTING doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but trim doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.slim.min.js"></script>
     <script src="https://cdn.bootcss.com/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278458530&web_id=1278458530"></script> -->
+    <div style="display: none;">
+      <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278458530&web_id=1278458530"></script>
+    </div>
   </body>
 </html>
